Add which-key vue key logger :+1:

--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "homepage": "https://github.com/jh3y/pen-case",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1"
   }
 }
