--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "env", {}
   ], "react"],
   "plugins": [
-    "transform-class-properties"
+    "transform-class-properties",
+    "transform-object-rest-spread"
   ]
 }
