--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,8 @@
   ], "react"],
   "plugins": [
     "transform-class-properties",
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    "syntax-async-functions",
+    "transform-regenerator"
   ]
 }
