--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "devDependencies": {
     "autoprefixer": "^6.0.3",
     "babel-cli": "^6.10.1",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-preset-es2015": "^6.9.0",
     "browser-sync": "^2.9.11",
     "postcss-cli": "^2.3.2",
