--- a/package.json
+++ b/package.json
@@ -26,11 +26,27 @@
   },
   "homepage": "https://github.com/jh3y/pen-case",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "src/**/*.{js,json,css,md}": [
+      "eslint",
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
+    "babel-eslint": "^8.2.5",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^5.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.10.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.13.7",
+    "prettier-eslint": "^8.8.2",
     "typescript": "^2.9.1"
   }
 }
