feat: add eslint-plugin-react-hooks to linting configuration

--- a/.eslintrc
+++ b/.eslintrc
@@ -25,7 +25,8 @@
   ],
   "plugins": [
     "prettier",
-    "react"
+    "react",
+    "react-hooks"
   ],
   "rules": {
     "prettier/prettier": [
