--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-preset-es2015": "^6.9.0",
     "browser-sync": "^2.26.7",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "postcss-cli": "^2.3.2",
     "pug-cli": "^1.0.0-alpha6",
     "stylus": "^0.54.5"
