--- a/.eslintrc
+++ b/.eslintrc
@@ -48,6 +48,8 @@
     "no-misleading-character-class": 0,
     "no-async-promise-executor": 0,
     "require-atomic-updates": 0,
-    "react/react-in-jsx-scope": 0
+    "react/react-in-jsx-scope": 0,
+    "react-hooks/rules-of-hooks": 2,
+    "react-hooks/exhaustive-deps": 1
   }
 }
