--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "description": "local CodePen development set up",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "2.x",
+    "@typescript-eslint/parser": "2.x",
     "autoprefixer": "^9.6.1",
     "babel-cli": "^6.26.0",
     "babel-plugin-syntax-async-functions": "^6.13.0",
@@ -11,7 +13,10 @@
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-preset-es2015": "^6.9.0",
     "browser-sync": "^2.26.7",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-flowtype": "3.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-react-hooks": "1.x",
     "postcss-cli": "^2.3.2",
     "pug-cli": "^1.0.0-alpha6",
     "stylus": "^0.54.5"
@@ -37,13 +42,14 @@
     ]
   },
   "dependencies": {
-    "babel-eslint": "^8.2.5",
+    "babel-eslint": "10.x",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^6.0.1",
+    "eslint": "6.x",
     "eslint-config-prettier": "^6.0.0",
+    "eslint-config-react-app": "^5.1.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react": "7.x",
     "husky": "^3.0.0",
     "lint-staged": "^9.2.0",
     "prettier": "^1.13.7",
