--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "src/**/*.{js,json,css}": [
+    "src/**/*.{js,json}": [
       "eslint",
       "prettier --write",
       "git add"
