--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,9 @@
 {
-  "presets": [[
-    "env", {}
-  ], "react"],
+  "presets": [
+    // [
+    // "env", {}
+  // ],
+   "react"],
   "plugins": [
     "transform-class-properties",
     "transform-object-rest-spread",
