feat: check in some updates

--- a/package.json
+++ b/package.json
@@ -3,15 +3,11 @@
   "version": "0.0.0",
   "description": "local CodePen development set up",
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.8",
     "@typescript-eslint/eslint-plugin": "2.x",
     "@typescript-eslint/parser": "2.x",
     "autoprefixer": "^9.6.1",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-preset-es2015": "^6.9.0",
     "browser-sync": "^2.26.7",
     "eslint-plugin-flowtype": "3.x",
     "eslint-plugin-import": "2.x",
@@ -32,9 +28,8 @@
   },
   "homepage": "https://github.com/jh3y/pen-case",
   "dependencies": {
-    "babel-eslint": "10.x",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/cli": "^7.14.8",
+    "@babel/preset-react": "^7.14.5",
     "eslint": "6.x",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-react-app": "^5.1.0",
