--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,16 @@
 {
   "presets": [
-    // [
-    // "env", {}
-  // ],
-   "react"],
-  "plugins": [
-    "transform-class-properties",
-    "transform-object-rest-spread",
-    "syntax-async-functions",
-    "transform-regenerator"
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "esmodules": true
+        },
+        "modules": false,
+        "loose": true,
+        "debug": true
+      }
+    ],
+    "@babel/preset-react"
   ]
 }
